# mandelbrot_examples

./: .gitignore  README.md
python/: README.md  mandelbrot.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs  mandelbrot_handler.rs
rust/src/calc/: mod.rs
rust/src/image/: mod.rs
rust/src/mandelbrot_gui/: main.rs  mandelbrot_gui.rs
