[package]
name = "mandelbrot"
version = "0.2.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2018"

[dependencies]
num = "0.4"
image = {version = "0.24"}
clap = { version = "4.1.4", features = ["derive"]}

[lib]
name = "mandelbrot_utils"
path = "src/lib.rs"

[[bin]]
name = "mandelbrot" 
path = "src/main.rs"
