[package]
name = "mandelbrot"
version = "0.2.2"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2018"

[dependencies]
num = "0.4"
image = {version = "0.24"}
clap = { version = "4.1.4", features = ["derive"]}
crossbeam = { version = "0.8.2" }
eframe = { version = "0.18.0"}

[lib]
name = "mandelbrot_utils"
path = "src/lib.rs"

[[bin]]
name = "mandelbrot" 
path = "src/main.rs"

[[bin]]
name = "mandelbrot_gui"
path = "src/mandelbrot_gui/main.rs"
